Fixed nested view animations
Addressed the small glitch where the animated views would turn invisible (height set to 0px) during transition

--- a/src/styles/animate.styl
+++ b/src/styles/animate.styl
@@ -8,7 +8,6 @@ ui-view.animated
     position relative
     transition all animationSpeed ease
     width 100% !important
-    height 0px !important
 
 .animated[ui-view].ng-enter,
 ui-view.animated.ng-enter
@@ -21,7 +20,6 @@ ui-view.animated.ng-leave
     position absolute
     width 100% !important
     animation fadeOutLeft animationSpeed !important
-    height 0px !important
 
 ui-view.animated.ng-leave .animated[ui-view]
     animation none !important
